--- a/src/App.css
+++ b/src/App.css
@@ -80,18 +80,7 @@ html {
 	cursor: pointer;
 }
 
-.homeButton {
-	color: white;
-	background: none !important;
-	border: none;
-	padding: 0 !important;
-	cursor: pointer;
-	font-size: 3rem;
-	margin-top: 89vh !important;
-	z-index: 9999;
-	position: relative;
-	left: auto; right: auto;
-}
+
 
 .leaflet-div-icon {
 	background-color: rgba(255, 0, 0, 0.0);
@@ -143,6 +132,7 @@ body {
 	width: 100vw;
 	z-index: 1000;
 	flex-wrap: wrap;
+	overflow: hidden;
 }
 .card {
 	margin-bottom: 15px;
@@ -181,6 +171,21 @@ body {
 	z-index: 5000;
 }
 
+.homeh1 {
+	padding-top: 4vh;
+	font-family: 'Rakkas';
+	font-weight: 800;
+	color: white !important;
+	position: absolute;
+	text-align: center;
+	margin: auto;
+	z-index: 5000;
+	font-size: 7rem;
+}
+.homeh1 a {
+	color: white !important;
+}
+
 .containerMain {
 	position: absolute;
 	text-align: center;
@@ -216,6 +221,8 @@ body {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	min-height: 100vh !important;
+	max-height: 100vh !important;
 }
 
 #homeDiv3 {
@@ -225,22 +232,49 @@ body {
 	justify-content: center;
 }
 
-.homeCarouselImg {
+.homeCarousel {
 	object-fit: cover;
+	min-height: 100vh;
+	min-width: 100%;
 }
 
 #homeh2 {
-	
-	margin: auto;
 	color: white !important;
-	font-size: 3rem !important;
-	
+	font-size: 4rem !important;
 }
+
+
 
 
 .carouselHome {
 	height:inherit;
 	width: inherit;
+}
+
+.homeButton {
+	color: white;
+	background: none !important;
+	border: none;
+	padding: 0 !important;
+	cursor: pointer;
+	font-size: 3rem;
+	margin-top: 89vh !important; 
+	z-index: 9999;
+	position: relative;
+	left: auto; right: auto;
+	align-self: flex-end;
+}
+
+.homeButton2 {
+	color: white;
+	background: none !important;
+	border: none;
+	padding: 0 !important;
+	cursor: pointer;
+	font-size: 3rem;
+	z-index: 9999;
+	position: absolute;
+	align-self: flex-end;
 }
 
 .carouselHomeImg{
@@ -619,6 +653,8 @@ svg {
 	width: 100vw;
 	z-index: 1000;
 	flex-wrap: wrap;
+	overflow:hidden;
+	box-shadow: 0px 1px 20px 1px rgba(61, 61, 61, 0.986);
 }
 
 .btn-primary {
