--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,18 @@ body {
 }
 
 body {
+	color: var(--color-three);
+	font-family: acumin-pro, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	text-align: center;
+	background-color: #eae9e9 !important;
+	max-width: 100%;
 	overflow-x: visible;
 }
 
 html {
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .header {
@@ -31,13 +38,30 @@ html {
 	background-color: #eae9e9 !important;
 }
 
+/*Leaflet map styling */
+
+.map {
+	margin-top: 7.5vh;
+	position: absolute;
+	top: 0;
+	bottom: 0vh;
+	left: 0;
+	right: 0;
+	border-top: 1px solid var(--color-one);
+}
+
+.leaflet-popup .leaflet-popup-content-wrapper .leaflet-popup-content {
+	width: auto !important;
+}
+
 .popupImg {
 	min-width: 25vw;
 	max-width: 26vw;
 }
 
-.leaflet-popup .leaflet-popup-content-wrapper .leaflet-popup-content {
-	width: auto !important;
+.leaflet-div-icon {
+	background-color: rgba(255, 0, 0, 0.0);
+	border: none;
 }
 
 .navWrapper {
@@ -45,8 +69,8 @@ html {
 	position: fixed;
 	top: 0;
 	bottom: 0;
-	left:0;
-	right:0;
+	left: 0;
+	right: 0;
 	z-index: 3000;
 }
 
@@ -80,39 +104,7 @@ html {
 	cursor: pointer;
 }
 
-
-
-.leaflet-div-icon {
-	background-color: rgba(255, 0, 0, 0.0);
-	border: none;
-}
-
-.map {
-	margin-top: 7.5vh;
-	position: absolute;
-	top: 0;
-	bottom: 0vh;
-	left: 0;
-	right: 0;
-	border-top: 1px solid var(--color-one);
-}
-
-body {
-	color: var(--color-three);
-	font-family: acumin-pro, sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	text-align: center;
-	background-color: #eae9e9 !important;
-	max-width: 100%;
-	/*
-  background-image: url("images/background.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-attachment: fixed;
-  */
-}
+/*NavBar Styling */
 
 .nav2 {
 	bottom: 0 !important;
@@ -134,6 +126,36 @@ body {
 	flex-wrap: wrap;
 	overflow: hidden;
 }
+
+.mainNav {
+	max-height: 10vh;
+	display: flex;
+	align-items: center;
+	font-size: calc(10px + 2vmin);
+	background-color: white;
+	justify-content: space-evenly;
+	border-bottom: 1.5px solid var(--color-one);
+	position: fixed !important;
+	width: 100vw;
+	z-index: 1000;
+	flex-wrap: wrap;
+	overflow: hidden;
+	box-shadow: 0px 1px 20px 1px rgba(61, 61, 61, 0.986);
+}
+
+.mainNav a {
+	display: inline-block;
+	max-width: 150px;
+	color: var(--color-one) !important;
+	margin-left: 4vmin;
+	font-family: 'Rakkas';
+	font-weight: 800;
+}
+
+.mainNavActive {
+	border-bottom: 2px solid var(--color-one);
+}
+
 .card {
 	margin-bottom: 15px;
 	border: none !important;
@@ -144,6 +166,8 @@ body {
 }
 
 .card-img {
+	width: auto;
+	max-width: 100% !important;
 	border-top-left-radius: 8px !important;
 	border-top-right-radius: 8px !important;
 }
@@ -179,7 +203,7 @@ body {
 	position: absolute;
 	text-align: center;
 	margin: auto;
-	z-index: 5000;
+	z-index: 2999;
 	font-size: 7rem;
 }
 .homeh1 a {
@@ -206,7 +230,6 @@ body {
 	min-height: 100vh;
 	background-repeat: no-repeat;
 	background-size: cover;
-	
 }
 
 #homeDiv1 {
@@ -216,7 +239,7 @@ body {
 
 #homeDiv2 {
 	background-color: var(--color-one);
-	color:white !important;
+	color: white !important;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -243,11 +266,8 @@ body {
 	font-size: 4rem !important;
 }
 
-
-
-
 .carouselHome {
-	height:inherit;
+	height: inherit;
 	width: inherit;
 }
 
@@ -258,28 +278,33 @@ body {
 	padding: 0 !important;
 	cursor: pointer;
 	font-size: 3rem;
-	margin-top: 89vh !important; 
+	margin-top: 82vh !important;
 	z-index: 9999;
 	position: relative;
-	left: auto; right: auto;
+	left: auto;
+	right: auto;
 	align-self: flex-end;
+	overflow-y: visible;
 }
 
 .homeButton2 {
 	color: white;
 	background: none !important;
 	border: none;
-	padding: 0 !important;
+	padding-left: 0 !important; 
+	padding-top: 0 !important; 
+	padding-right: 0 !important;
 	cursor: pointer;
 	font-size: 3rem;
-	z-index: 9999;
+	z-index: 2999;
 	position: absolute;
 	align-self: flex-end;
+	padding-bottom: 5vh;
 }
 
-.carouselHomeImg{
+.carouselHomeImg {
 	min-height: 92vh;
-	min-width:100vw;
+	min-width: 100vw;
 }
 
 .saveButton:focus {
@@ -425,6 +450,10 @@ a {
 }
 
 @media (min-width: 351px) and (max-width: 767px) {
+	html,
+	body {
+		overflow-y: auto;
+	}
 	.mainNav {
 		display: none;
 	}
@@ -445,8 +474,8 @@ a {
 	}
 
 	.popupImg {
-		max-width: 40vw;
-		min-width: 40vw;
+		max-width: 60vw;
+		min-width: 50vw;
 	}
 
 	.logo {
@@ -515,7 +544,15 @@ a {
 	.check {
 		margin-bottom: 7vh;
 	}
+
+
+	.homeh1 {
+		font-size: 5rem;
+	}
 }
+
+
+
 
 .savedHeading {
 	background-color: white !important;
@@ -523,6 +560,10 @@ a {
 }
 
 @media (max-width: 350px) {
+	body {
+		overflow-y: scroll;
+	}
+
 	.card {
 		border-bottom: 1px solid var(--color-one) !important;
 		max-width: 100% !important;
@@ -623,6 +664,13 @@ a {
 	.check {
 		margin-bottom: 7vh;
 	}
+	.popupImg{
+		min-width: 70vw;
+	}
+
+	.homeh1 {
+		font-size: 5rem;
+	}
 }
 
 @media (max-width: 700px) and (min-height: 800px) {
@@ -639,22 +687,6 @@ img {
 svg {
 	height: 1.5em;
 	width: 1.5em;
-}
-
-.mainNav {
-	max-height: 10vh;
-	display: flex;
-	align-items: center;
-	font-size: calc(10px + 2vmin);
-	background-color: white;
-	justify-content: space-evenly;
-	border-bottom: 1.5px solid var(--color-one);
-	position: fixed !important;
-	width: 100vw;
-	z-index: 1000;
-	flex-wrap: wrap;
-	overflow:hidden;
-	box-shadow: 0px 1px 20px 1px rgba(61, 61, 61, 0.986);
 }
 
 .btn-primary {
@@ -680,15 +712,6 @@ svg {
 	width: 100%;
 	height: 100%;
 	background-color: #eae9e9;
-}
-
-.mainNav a {
-	display: inline-block;
-	max-width: 150px;
-	color: var(--color-one) !important;
-	margin-left: 4vmin;
-	font-family: 'Rakkas';
-	font-weight: 800;
 }
 
 .nav2 img {
