reduced size of home screen image

--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,7 @@ html {
 }
 
 #homeDiv1 {
-	background-image: url('../src/images/background4.jpg');
+	background-image: url('../src/images/background4.webp');
 	z-index: 4999;
 }
 
